Fix typo and order in font-family syntax

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,7 +1,7 @@
 /* Add CSS Styling */
 .one {
   background-color: #ad9eae;
-  font-family: 'Verdana', 'DejaVu Sans', sans-serif;
+  font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
 
 .three {
