--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -19,8 +19,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
-  padding: 10px;
-  margin-top: 12px;
+  padding: 8px 16px;
+  /* margin-top: 12px; */
 }
 
 input {
@@ -43,14 +43,18 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
 }
 
 .header,
 .footer {
   display: flex;
-  background-color: #eeeeee;
   justify-content: space-between;
   padding: 15px;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
 
 ul {
